@@ -1,5 +1,13 @@
 2005-08-31  Volker Reichelt  <reichelt@igpm.rwth-aachen.de>
 
+	PR c++/23586
+	* parser.c (cp_parser_namespace_name): Move diagnostic for
+	invalid namespace-name to here from ...
+	* name-lookup.c (do_namespace_alias): ... here and ...
+	(do_using_directive): ... here.  Remove dead code.
+
+2005-08-31  Volker Reichelt  <reichelt@igpm.rwth-aachen.de>
+
 	PR c++/23639
 	* semantics.c (qualified_name_lookup_error): Do not complain again
 	on invalid scope.
